# llm-jp-eval-mm

./: .env.sample  .gitignore  .pre-commit-config.yaml  DATASET.md  LICENSE  README.md  README_en.md  README_ja.md  eval_all.sh  pyproject.toml  sample.py  test.sh  test_model.sh
.github/workflows/: python-publish.yml  test.yml
data/japanese-heron-bench/: README.md  README_ja.md
eval_mm/: __init__.py
eval_mm/api/: registry.py  task.py
eval_mm/tasks/: japanese_heron_bench.py
examples/: EvoVLM_JP_v1_7B.py  GPT4o.py  GPT_4o.py  InternVL2.py  InternVL2_8B.py  LiteLLM.py  Llama_3_2_11B_Vision_Instruct.py  Llama_3_2_11B_Vision_Instruct_Swallow_8B_Merge.py  Llama_3_EZO_VLM_1.py  Llama_3_EvoVLM_JP_v2.py  Pangea_7B_hf.py  Pixtral_12B_2409.py  Qwen2_VL.py  Qwen2_VL_7B_Instruct.py  VILA_ja.py  base_vlm.py  evovlm.py  gemma3.py  internlm_xcomposer2d5_7b.py  internvl_2.py  japanese_instruct_blip_alpha.py  japanese_instructblip_alpha.py  japanese_stable_vlm.py  llava.py  llava_1_5.py  llava_1_5_7b_hf.py  llava_1_6.py  llava_calm2_siglip.py  llava_v1_6_mistral_7b_hf.py  model_table.py  sample.py  sarashina.py  stablevlm.py  util.py  utils.py  vila.py
github_pages/: .gitignore  .prettierrc  README.md  package-lock.json  package.json
github_pages/public/: dataset_url.json  default_metrics.json  index.html  leaderboard.json
github_pages/src/: Author.js  BibTex.js  Figure.css  Figure.js  Footer.js  Introduction.js  Leaderboard.css  Leaderboard.js  LinkButton.css  LinkButton.js  Main.js  Method.js  PageLayout.js  PaperMetaData.css  PaperMetaData.js  Result.js  index.css  index.js
notebooks/: 20240711_heronbench.ipynb  gpt4.ipynb  heron_bench_to_llmjp_hf.ipynb
scripts/: consistency_mecha_ja.py  eval_heron.sh  evaluate.fish  evaluate.sh  make_leaderboard.py  prepare_jic_vqa.py  record_metrics.py  record_output.py  record_table.py
scripts/japanese-heron-bench/: record_output.py
src/: __init__.py  _version.py  sample.py
src/api/: task.py
src/eval_mm/: __init__.py  _version.py
src/eval_mm/api/: registry.py  task.py
src/eval_mm/metrics/: __init__.py  exact_match_scorer.py  heron_bench_scorer.py  jdocqa_scorer.py  jic_vqa_scorer.py  jmmmu_scorer.py  llm_as_a_judge_scorer.py  mecha_ja_scorer.py  mmmu_scorer.py  rougel_scorer.py  scorer.py  substring_match_scorer.py
src/eval_mm/tasks/: __init__.py  ja_multi_image_vqa.py  ja_vg_vqa_500.py  ja_vlm_bench_in_the_wild.py  japanese_heron_bench.py  jdocqa.py  jdocqa_limit.py  jic_vqa.py  jmmmu.py  jmmmu_limit.py  llava_bench_in_the_wild.py  mecha_ja.py  mmmu.py
src/eval_mm/utils/: azure_client.py  litellm_client.py  metrics.py  templates.py
src/llm_jp_eval_mm/: __init__.py  evaluator.py  utils.py
src/llm_jp_eval_mm/api/: model.py  registry.py  tasks.py
src/llm_jp_eval_mm/configs/: __init__.py  base_config.yaml
src/llm_jp_eval_mm/configs/models/: evovlm-jp-v1.yaml  sample.yaml
src/llm_jp_eval_mm/configs/tasks/: japanese-heron-bench.yaml
src/llm_jp_eval_mm/datasets/: __init__.py  heron_bench.py
src/llm_jp_eval_mm/models/: __init__.py  evovlm_jp_v1.py  japanese_instructblip_alpha.py  sample_model.py
src/llm_jp_eval_mm/results/japanese-heron-bench/SakanaAI/EvoVLM-JP-v1-7B/: eval.json  inference.jsonl
src/llm_jp_eval_mm/results/japanese-heron-bench/sasagawa_model/: eval.json  inference.jsonl
src/llm_jp_eval_mm/tasks/: __init__.py  japanese_heron_bench.py  sample_task.py  utlis.py
src/tasks/: __init__.py  ja_vg_vqa_500.py  japanese_heron_bench.py
src/utils/: azure_client.py  metrics.py
tips/: evaluation.md
