[project]
name = "llm-jp-eval-mm"
version = "0.1.0"
description = "llm-jp-eval-mm is a tool for evaluating Multi-Modal Large Language Models."
authors = [
    { name = "Silviase", email = "koki.maeda@nlp.c.titech.ac.jp" }
]
dependencies = [
    "datasets>=2.21.0",
    "torch>=2.4.0",
    "transformers>=4.42.4, <4.43.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "openai>=1.42.0",
    "pillow>=10.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
    "mypy>=1.11.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
