[project]
name = "eval-mm"
description = "eval-mm is a tool for evaluating Multi-Modal Large Language Models."
authors = [
    { name = "Silviase", email = "koki.maeda@nlp.c.titech.ac.jp" },
    { name = "speed1313", email = "sugiura.issa.q29@kyoto-u.jp" },
]
dependencies = [
    "datasets==2.18.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "openai>=1.42.0",
    "rouge-score>=0.1.2",
    "emoji>=2.12.1",
    "fugashi>=1.3.2",
    "unidic-lite>=1.0.8",
]
readme = "README.md"
requires-python = ">= 3.12.1"

dynamic = [
    "version"
]

[project.urls]
Repository = "https://github.com/llm-jp/llm-jp-eval-mm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/eval_mm/_version.py"

[tool.hatch.build]
exclude = [
    "result",
    "scripts",
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
    "mypy>=1.11.2",
    "tiktoken>=0.7.0",
    "matplotlib>=3.7.5",
    "transformers_stream_generator>=0.0.5",
    "einops>=0.8.0",
    "torchvision>=0.19.0",
    "timm>=1.0.9",
    "sentencepiece>=0.2.0",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "pytest>=8.3.2",
    "torch>=2.4.0",
    "transformers>=4.45.2",
    "accelerate>=0.34.2",
    "click>=8.1.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eval_mm"]
